# SoundSave

./: LICENSE  README.md  README_RUS.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  covers.py  downloads.py  import_.py  preview.py  search.py
backend/app/core/: config.py  exceptions.py  ffmpeg.py  lifespan.py  logger.py
backend/app/database/: database.py
backend/app/database/query/: orm.py
backend/app/models/: download.py
backend/app/schemas/: download.py  search.py
backend/app/services/: downloader.py  soundcloud.py  yandex.py  yandex_auth.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  theme.js
frontend/src/components/: AlternativesPanel.jsx  CloseBtn.jsx  CoverPickerModal.jsx  DownloadReportModal.jsx  DownloadsPanel.jsx  EmptyState.jsx  ImportTracklistModal.jsx  MiniPlayer.jsx  QueuePanel.jsx  SearchPanel.jsx  YandexAuthModal.jsx
frontend/src/utils/: format.js  trackModifiers.js
