[project]
name = "soundsave"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2024.11.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "mutagen>=1.47.0",
    "static-ffmpeg>=2.5.0",
    "yandex-music>=3.0.0",
    "keyring>=25.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
